# goxlr-aspl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_and_install.sh
.github/workflows/: build-release.yml
goxlr-audio-helper/: Cargo.toml
goxlr-audio-helper/src/: main.rs
lib/: CMakeLists.txt  dependencies.cmake
src/: CMakeLists.txt  device.cpp  device.hpp  driver.cpp  driver.hpp  entry_point.cpp  goxlr_manager.cpp  goxlr_manager.hpp  ringbuffer.cpp
