[package]
name = "goxlr-audio-helper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
coreaudio-sys = "0.2.15"
coreaudio-rs = "0.11.3"
core-foundation = "0.9.4"
io-kit-sys = "0.4.0"
log = "0.4.20"

enum-map = "3.0.0-beta.2"
strum = { version = "0.26.1", features=["derive"] }

bounded-vec-deque = "0.1.1"